# fastapi-tortoise-template-app

./: .gitignore  app_factory.py  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  settings.py
apps/authtoken/: api_views.py  models.py  security.py  serializers.py
apps/products/: api_view.py  models.py
apps/user/: api_views.py  models.py  serializers.py
migrations/models/: 1_20211217120745_None.sql  2_20211217121108_add_date_of_birth_column.sql
